# gymshark-task

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
ddl/: db_init.sql  ddl_dbiagram.txt
gymshark/: pipeline.py  schemas.py
tests/: test_pipeline.py
